@@ -1,5 +1,5 @@
 {
-  "count": 3,
+  "count": 4,
   "uniques": 3,
   "clones": [
     {
@@ -9,6 +9,11 @@
     },
     {
       "timestamp": "2025-01-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-01-31T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
