@@ -1,3 +1,12 @@
+2025-02-01T01:45:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13083854293 # 552
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-01
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 880 1355 / 883 1358
+* notice: next accum: outdated-unq outdated-all / unq all: 880 1355 / 884 1359
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-01-31]
+
 2025-01-28T01:40:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13001927400 # 548
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-28
